feat: 게시판 뷰 체계 수정 및 좋아요 기능 추가됨.