@@ -1,26 +1,21 @@
 package com.fiveguys.trip_planner.service;
 
 import com.fiveguys.trip_planner.dto.CommunityRequest;
-import com.fiveguys.trip_planner.entity.Community;
-import com.fiveguys.trip_planner.entity.CommunityImage;
-import com.fiveguys.trip_planner.entity.User;
-import com.fiveguys.trip_planner.repository.CommunityImageRepository;
-import com.fiveguys.trip_planner.repository.CommunityRepository;
-import com.fiveguys.trip_planner.repository.UserRepository;
+import com.fiveguys.trip_planner.entity.*;
+import com.fiveguys.trip_planner.repository.*;
 import com.fiveguys.trip_planner.response.CommunityResponse;
 import lombok.RequiredArgsConstructor;
 import org.jsoup.Jsoup;
 import org.jsoup.safety.Safelist;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,6 +25,7 @@ public class CommunityService {
     private final CommunityRepository communityRepository;
     private final UserRepository userRepository;
     private final CommunityImageRepository communityImageRepository;
+    private final CommunityLikeRepository communityLikeRepository;
 
     /**
      * 🔥 게시글 작성
@@ -38,7 +34,6 @@ public class CommunityService {
     public Long createPost(CommunityRequest request) {
         validateRequest(request);
 
-        // XSS 방어
         String safeContent = Jsoup.clean(request.getContent(), Safelist.relaxed());
 
         User user = userRepository.findById(request.getUserId())
@@ -55,55 +50,69 @@ public class CommunityService {
                 .rating(request.getRating())
                 .authorNickname(user.getNickname())
                 .viewCount(0L)
-                .recommendCount(0L)
+                .shareCount(0L)
+                .likeCount(0L)
                 .build();
 
-        Community savedCommunity = communityRepository.save(community);
+        Community saved = communityRepository.save(community);
 
         if (request.getImageIds() != null && !request.getImageIds().isEmpty()) {
             for (Long imageId : request.getImageIds()) {
-                communityImageRepository.findById(imageId).ifPresent(image -> {
-                    image.setCommunity(savedCommunity);
-                });
+                communityImageRepository.findById(imageId)
+                        .ifPresent(img -> img.setCommunity(saved));
             }
         }
 
-        return savedCommunity.getId();
+        return saved.getId();
     }
 
     /**
-     * 🔥 게시글 목록 조회 (통합 필터링 및 페이징)
-     * 카테고리, 지역, 검색어에 따른 동적 쿼리를 수행합니다.
+     * 🔥 게시글 목록 조회
      */
-    public Page<CommunityResponse> getPosts(int page, int size, String category, String region, String searchType, String keyword) {
-        // 1. 페이지네이션 설정 (ID 내림차순 - 최신순)
-        PageRequest pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
+    public Page<CommunityResponse> getPosts(int page, int size,
+                                            String category, String region,
+                                            String searchType, String keyword) {
 
-        // 2. 검색어 전처리 (프론트에서 '전체보기'를 선택하면 null로 처리)
+        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
+
         String filterCategory = ("전체보기".equals(category)) ? null : category;
-        String searchKeyword = (keyword != null && !keyword.trim().isEmpty()) ? "%" + keyword.trim() + "%" : null;
 
-        // 3. 필터링된 결과 조회
+        if (!"title".equals(searchType) && !"author".equals(searchType)) {
+            searchType = null;
+        }
+
+        String cleanKeyword = (keyword != null && !keyword.trim().isEmpty())
+                ? keyword.trim()
+                : null;
+
         return communityRepository.findWithFilters(
                 filterCategory,
                 region,
                 searchType,
-                searchKeyword,
+                cleanKeyword,
                 pageable
         ).map(CommunityResponse::from);
     }
 
     /**
-     * 🔥 게시글 단건 조회
+     * 🔥 게시글 단건 조회 (likedByMe 포함)
      */
     public CommunityResponse getPost(Long id) {
+
         Community post = communityRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("게시글을 찾을 수 없습니다."));
 
         List<Long> imageIds = communityImageRepository.findByCommunityId(id)
                 .stream()
                 .map(CommunityImage::getId)
-                .collect(Collectors.toList());
+                .toList();
+
+        boolean likedByMe = false;
+
+        try {
+            User user = getCurrentUser();
+            likedByMe = communityLikeRepository.existsByUserAndCommunity(user, post);
+        } catch (Exception ignored) {}
 
         return CommunityResponse.builder()
                 .id(post.getId())
@@ -114,12 +123,14 @@ public class CommunityService {
                 .authorNickname(post.getAuthorNickname())
                 .tags(post.getTags())
                 .viewCount(post.getViewCount())
-                .recommendCount(post.getRecommendCount())
+                .shareCount(post.getShareCount())
+                .likeCount(post.getLikeCount())
+                .likedByMe(likedByMe)
+                .rating(post.getRating())
                 .createdAt(post.getCreatedAt())
                 .updatedAt(post.getUpdatedAt())
                 .departure(post.getDeparture())
                 .arrival(post.getArrival())
-                .rating(post.getRating())
                 .imageIds(imageIds)
                 .build();
     }
@@ -135,7 +146,9 @@ public class CommunityService {
                     .contentType(file.getContentType())
                     .data(file.getBytes())
                     .build();
+
             return communityImageRepository.save(image).getId();
+
         } catch (IOException e) {
             throw new RuntimeException("이미지 저장 중 오류 발생", e);
         }
@@ -146,6 +159,9 @@ public class CommunityService {
                 .orElseThrow(() -> new IllegalArgumentException("이미지를 찾을 수 없습니다. ID: " + id));
     }
 
+    /**
+     * 🔥 조회수 증가
+     */
     @Transactional
     public void viewPost(Long postId) {
         Community community = communityRepository.findById(postId)
@@ -153,23 +169,80 @@ public class CommunityService {
         community.incrementViewCount();
     }
 
+    /**
+     * 🔥 공유 증가
+     */
     @Transactional
-    public void recommendPost(Long postId) {
+    public void incrementShare(Long postId) {
         Community community = communityRepository.findById(postId)
-                .orElseThrow(() -> new IllegalArgumentException("게시글을 찾을 수 없습니다."));
-        community.incrementRecommend();
+                .orElseThrow(() -> new RuntimeException("게시글 없음"));
+
+        community.incrementShareCount();
     }
 
+    /**
+     * 🔥 좋아요 토글 (핵심)
+     */
     @Transactional
-    public void unRecommendPost(Long postId) {
-        Community community = communityRepository.findById(postId)
-                .orElseThrow(() -> new IllegalArgumentException("게시글을 찾을 수 없습니다."));
-        community.decrementRecommend();
+    public boolean toggleLike(Long communityId) {
+
+        Community community = communityRepository.findById(communityId)
+                .orElseThrow(() -> new RuntimeException("게시글 없음"));
+
+        User user = getCurrentUser();
+
+        return communityLikeRepository.findByUserAndCommunity(user, community)
+                .map(existing -> {
+                    communityLikeRepository.delete(existing);
+                    community.decrementLikeCount();
+                    return false;
+                })
+                .orElseGet(() -> {
+                    CommunityLike like = CommunityLike.of(user, community);
+                    communityLikeRepository.save(like);
+                    community.incrementLikeCount();
+                    return true;
+                });
     }
 
-    // --- 내부 검증 로직 ---
+    /**
+     * 🔥 좋아요 개수 조회
+     */
+    public Long getLikeCount(Long communityId) {
+        return communityRepository.findById(communityId)
+                .orElseThrow(() -> new RuntimeException("게시글 없음"))
+                .getLikeCount();
+    }
+
+    /**
+     * 🔥 내가 눌렀는지
+     */
+    public boolean isLiked(Long communityId) {
+
+        Community community = communityRepository.findById(communityId)
+                .orElseThrow(() -> new RuntimeException("게시글 없음"));
+
+        User user = getCurrentUser();
+
+        return communityLikeRepository.existsByUserAndCommunity(user, community);
+    }
+
+    /**
+     * 🔥 로그인 유저 가져오기 (공통)
+     */
+    private User getCurrentUser() {
+        return (User) SecurityContextHolder
+                .getContext()
+                .getAuthentication()
+                .getPrincipal();
+    }
+
+    // =========================
+    // 내부 검증
+    // =========================
 
     private void validateRequest(CommunityRequest request) {
+
         if (request.getTitle() == null || request.getTitle().trim().isEmpty())
             throw new IllegalArgumentException("제목은 필수입니다.");
 
@@ -191,11 +264,13 @@ public class CommunityService {
     }
 
     private boolean isPlanCategory(String category) {
-        return category != null && (category.equals("여행플랜 공유") || category.equals("당일치기 친구 찾기"));
+        return category != null &&
+                (category.equals("여행플랜 공유") || category.equals("당일치기 친구 찾기"));
     }
 
     private boolean isRatingCategory(String category) {
-        return category != null && (category.equals("맛집게시판") || category.equals("사진게시판") || category.equals("후기게시판"));
+        return category != null &&
+                (category.equals("맛집게시판") || category.equals("사진게시판") || category.equals("후기게시판"));
     }
 
     private boolean isEmpty(String value) {
